z-index fix

--- a/media/media.css
+++ b/media/media.css
@@ -10,6 +10,7 @@
     .links {
         top: 50px;
         margin-left: -130%;
+        z-index: -1;
     }
     .burg {
         position: fixed;
